--- a/style.css
+++ b/style.css
@@ -6,3 +6,18 @@
 #cursiveLogo {
     height: 30px;
 }
+
+#discover-logo {
+    height: 30px;
+    width: 30px;
+}
+
+#like-logo {
+    height: 30px;
+    width: 30px;
+}
+
+#profile-logo {
+    height: 30px;
+    width: 30px;
+}
