--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 #cursiveLogo {
     height: 30px;
+    padding-left: 15px;
+    border-color: black transparent transparent transparent;
 }
 
 #discover-logo {
