--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding-left: 15px;
     border-left: 10px;
     border-left-color: black;
+    border-style: solid;
     margin-left: 10px;
 }
 
