--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     border-color: transparent transparent transparent black;
     border-style: solid;
     margin-left: 10px;
+    margin-top: 2px;;
 }
 
 #discover-logo {
