--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@
 #cursiveLogo {
     height: 30px;
     padding-left: 15px;
-    border: 0px 0px 0px 1px;
+    border: 0px 0px 0px .5px;
     border-color: transparent transparent transparent black;
     border-style: solid;
     margin-left: 10px;
-    margin-top: 2px;;
 }
 
 #discover-logo {
