--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 #cursiveLogo {
     height: 30px;
     padding-left: 15px;
+    padding-top: 2px;
     border-width: 0px 0px 0px .2px;
     border-color: transparent transparent transparent black;
     border-style: solid;
