--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.header {
+    position: fixed;
+}
+
 #logoPic {
     height: 30px;
     width: 30px;
@@ -12,6 +16,10 @@
     border-color: transparent transparent transparent black;
     border-style: solid;
     margin-left: 10px;
+}
+
+.searchbox {
+    float: left;
 }
 
 #discover-logo {
