--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     width: 30px;
     margin-right: 10px;
     float: left;
+    position: relative;
+    top: 4px;
 }
 
 #cursiveLogo {
@@ -22,6 +24,8 @@
 
 #searchbox {
     float: left;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .header-buttons {
