--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .header {
     position: fixed;
     width: 100%;
-    padding: 14px 2px 14px 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     border-bottom: 1px solid #24232319;
 }
 
@@ -27,7 +28,7 @@
 }
 
 .headerbutton {
-    margin-left: 22;
+    margin-left: 22px;
 }
 
 #searchbox {
