--- a/style.css
+++ b/style.css
@@ -36,8 +36,14 @@ body {
 }
 
 #searchbox {
-    margin-left: auto;
-    margin-right: auto;
+    padding: 12px 12px 12px 36px;
+    text-align: center;
+    border: 1px solid #dbdbdb;
+    border-radius: 4px;
+    left: 43%;
+    width: 200px;
+    height: 12px;
+    color: #8f8f8f;
 }
 
 .header-buttons {
