--- a/style.css
+++ b/style.css
@@ -41,9 +41,10 @@ body {
     border: 1px solid #dbdbdb;
     border-radius: 4px;
     position: relative;
-    left: 43%;
+    left: 20%;
     width: 200px;
     height: 12px;
+    background-color: #d6d6d6;
     color: #8f8f8f;
 }
 
@@ -54,16 +55,16 @@ body {
 }
 
 #discover-logo {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
 }
 
 #like-logo {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
 }
 
 #profile-logo {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
 }
