--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body {
 #searchbox {
     padding: 12px 12px 12px 36px;
     text-align: center;
-    border: 1px solid #dbdbdb;
+    border: 1px solid #c2c2c2;
     border-radius: 4px;
     position: relative;
     left: 20%;
     width: 200px;
     height: 12px;
-    background-color: #d6d6d6;
+    background-color: #f3f3f3;
     color: #8f8f8f;
 }
 
