--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0px;
+    /* font from instagram website*/
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
 }
 
 .header {
