--- a/style.css
+++ b/style.css
@@ -43,11 +43,12 @@ body {
     border: 1px solid #c2c2c2;
     border-radius: 4px;
     position: relative;
-    left: 20%;
+    left: 24%;
     width: 200px;
     height: 12px;
     background-color: #f5f5f5;
     color: #8f8f8f;
+    font-size: .9em;
 }
 
 .header-buttons {
