--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body {
     background-color: #f5f5f5;
     color: #8f8f8f;
     font-size: .9em;
+    background-image: url("search.png");
+}
+
+#searchbox:focus {
+    background-color: #ffffff;
+    background-position: 10%;
 }
 
 .header-buttons {
