--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ body {
     color: #8f8f8f;
     font-size: .9em;
     background-image: url("search.png");
-    background-size: 25px;
+    background-size: 15px;
+    background-position: 30% 60%;
     background-repeat: no-repeat;
 }
 
