--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 
 #searchbox {
     padding: 13px 12px 13px 36px;
+    margin-top: 3px;;
     text-align: center;
     border: 1px solid #c2c2c2;
     border-radius: 4px;
