--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     float: left;
     position: relative;
     top: 2px;
-    padding-left: 65px;
+    margin-left: 65px;
 }
 
 #cursiveLogo {
@@ -39,7 +39,7 @@ body {
 
 #searchbox {
     padding: 13px 12px 13px 36px;
-    margin-top: 3px;;
+    margin-top: 3px;
     text-align: center;
     border: 1px solid #c2c2c2;
     border-radius: 4px;
@@ -64,7 +64,7 @@ body {
 .header-buttons {
     float: right;
     padding-left: 24px;
-    padding-right: 20px;
+    margin-right: 100px;
 }
 
 #discover-logo {
