--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 #searchbox {
-    padding: 13px 12px 13px 36px;
+    padding: 15px 12px 15px 36px;
     margin-top: 3px;
     text-align: center;
     border: 1px solid #c2c2c2;
@@ -49,10 +49,10 @@ body {
     height: 16px;
     background-color: #f5f5f5;
     color: #8f8f8f;
-    font-size: .9em;
+    font-size: 1.1em;
     background-image: url("search.png");
-    background-size: 13px;
-    background-position: 30% 50%;
+    background-size: 11px;
+    background-position: 35% 52%;
     background-repeat: no-repeat;
 }
 
