--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ body {
 
 #searchbox:focus {
     background-color: #ffffff;
-    background-position: 10%;
+    border: 1px solid #c2c2c2;
+    background-position: -10%;
 }
 
 .header-buttons {
