--- a/style.css
+++ b/style.css
@@ -85,9 +85,11 @@ body {
 
 .post-header {
     width: 60%;
+    float: left;
+    clear: left;
 }
 
 .profile-pic {
-    height: 27px;
+    height: 40px;
     margin: 10 0 10 20;
 }
