--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     float: left;
     position: relative;
     top: 2px;
-    margin-left: 67px;
+    margin-left: 6%;
 }
 
 #cursiveLogo {
@@ -64,7 +64,7 @@ body {
 .header-buttons {
     float: right;
     padding-left: 24px;
-    margin-right: 126px;
+    margin-right: 12%;
     margin-top: 5px;
 }
 
@@ -85,8 +85,9 @@ body {
 
 .post {
     width: 60%;
-    float: left;
-    clear: left right;
+    margin-left: 6%;
+    border-style: solid;
+    border-color: black;
 }
 
 .profile-pic {
