--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 .header {
     position: fixed;
+    display: flex;
     width: 100%;
     padding-top: 12px;
     padding-bottom: 16px;
@@ -86,6 +87,8 @@ body {
 .post {
     width: 60%;
     margin-left: 6%;
+    position: relative;
+
     border-style: solid;
     border-color: black;
 }
