--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     /* font from instagram website*/
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     display: flex;
+    flex-direction: column;
 }
 
 .header {
