--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%
+}
+
 body {
     margin: 0px;
     /* font from instagram website*/
@@ -91,7 +95,6 @@ body {
 .post {
     width: 60%;
     margin-left: 6%;
-    position: relative;
 
     border-style: solid;
     border-color: black;
