--- a/style.css
+++ b/style.css
@@ -66,8 +66,11 @@ body {
     background-position: -10%;
 }
 
-.header-buttons {
+#header-buttons {
     position: relative;
+    padding-left: 24px;
+    margin-right: 12%;
+    margin-top: 5px;
     display: flex;
 }
 
