--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
     border-radius: 4px;
     width: 242px;
     height: 16px;
+    margin-left: 6%;
     background-color: #f5f5f5;
     color: #8f8f8f;
     font-size: 1em;
