--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     /* font from instagram website*/
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    background-color: #eeeeee;
+    background-color: #f8f8f8;
     display: flex;
     flex-direction: column;
 }
