--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ body {
 }
 
 .profile-pic {
-    height: 40px;
-    margin: 10 10 10 10;
+    height: 37px;
+    margin: 10px 10px 10px 10px;
 }
 
 .username {
