--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .post-header {
-    border: 2px solid #24232319;
+    border-bottom: 2px solid #24232319;
     display: flex;
     align-items: center;
 }
