--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
 }
 
 .username {
-    margin-left: 1.5%;
+    margin-left: 10px;
     text-decoration: none;
     color: black;
     font-weight: 650;
@@ -146,7 +146,7 @@ body {
 }
 
 .post-button-icon {
-    height: 30px;
+    height: 25px;
 }
 
 .like-button {
@@ -154,13 +154,38 @@ body {
 }
 
 .comment-button {
-    margin-left: 30px;
+    margin-left: 25px;
 }
 
 .share-button {
-    margin-left: 30px;
+    margin-left: 25px;
 }
 
 .save-button {
     margin-right: 15px;
+}
+
+.like-count {
+    margin-top: 10px;
+    margin-left: 15px;
+    text-decoration: none;
+    color: black;
+    font-weight: 650;
+}
+
+.captions-stuff {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 15px;
+}
+
+.caption {
+    text-decoration: none;
+    color: black;
+    margin-left: 5px;
+}
+
+.time {
+    margin-left: 15px;
+    margin-top: 10px;
 }
