--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .post-button-icon {
@@ -173,6 +172,10 @@ body {
     font-weight: 650;
 }
 
+#username-1 {
+    margin-left: 15px;
+}
+
 .captions-stuff {
     display: flex;
     margin-top: 10px;
@@ -187,5 +190,5 @@ body {
 
 .time {
     margin-left: 15px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
