--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ body {
 
 .captions-stuff {
     display: flex;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: 15px;
 }
 
@@ -190,5 +190,6 @@ body {
 
 .time {
     margin-left: 15px;
-    margin-top: 5px;
+    margin-top: 3px;
+    font-weight: 300;
 }
