--- a/style.css
+++ b/style.css
@@ -198,6 +198,9 @@ body {
 
 .footer-line {
     margin-top: 15px;
+    height: 1px;
+    width: 80%;
+    color: rgb(121, 121, 121);
 }
 
 .comment-edit {
@@ -215,5 +218,5 @@ body {
 }
 
 .dots-img {
-    width: 30px;
+    width: 25px;
 }
