--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ body {
 
 .footer-line {
     margin-top: 15px;
+    margin-bottom: 0px;
     width: 95%;
     border-style: solid;
     color: rgb(240, 240, 240);
@@ -210,7 +211,8 @@ body {
 }
 
 .comment {
-    padding: 30px 12px 15px 80px;
+    height: 45px;
+    width: 450px;
 }
 
 .dots {
