--- a/style.css
+++ b/style.css
@@ -215,6 +215,8 @@ body {
     height: 45px;
     width: 90%;
     border-color: transparent;
+    font-size: 1.2em;
+    font-weight: 400;
 }
 
 .dots {
