--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ body {
     margin-top: 80px;
 }
 
+#post-2 {
+    margin-top: 80px;
+}
+
 .post-header {
     border-bottom: .5px solid #24232319;
     display: flex;
@@ -121,6 +125,7 @@ body {
 .profile-pic {
     height: 37px;
     border-radius: 50%;
+    border: 1px solid rgb(235, 235, 235);
 }
 
 .username {
