--- a/style.css
+++ b/style.css
@@ -183,6 +183,10 @@ body {
     margin-left: 20px;
 }
 
+#username-2 {
+    margin-left: 20px;
+}
+
 .captions-stuff {
     display: flex;
     margin-top: 15px;
