--- a/style.css
+++ b/style.css
@@ -262,15 +262,15 @@ body {
 
 .suggest-caption {
     margin-left: 4%;
-    color:#919191;
+    color:#9c9c9c;
     font-size: .9em;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .see-all {
     margin-right: 4%;
     text-decoration: none;
     font-size: .8em;
-    font-weight: 500;
+    font-weight: 650;
     color: rgb(61, 115, 214);
 }
