--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body {
 .suggested {
     display: flex;
     flex-direction: column;
-    height: 100px;
+    height: 400px;
     width: 58%;
     margin-left: 6%;
     border: 1px solid #24232319;
@@ -261,10 +261,10 @@ body {
 }
 
 .suggest-caption {
-    margin-left: 4%;
-    color:#9c9c9c;
+    margin-left: 3%;
+    color:#8f8f8f;
     font-size: .9em;
-    font-weight: 600;
+    font-weight: 650;
 }
 
 .see-all {
@@ -272,5 +272,14 @@ body {
     text-decoration: none;
     font-size: .8em;
     font-weight: 650;
-    color: rgb(82, 134, 231);
+    color: rgb(76 164 255);
+}
+
+.suggestions {
+    display: flex;
+    height: 50px;
+    width: 28%;
+    margin-left: 40px;
+    border: 1px solid #24232319;
+    border-radius: 3px;;
 }
