--- a/style.css
+++ b/style.css
@@ -283,3 +283,14 @@ body {
     border: 1px solid #24232319;
     border-radius: 3px;;
 }
+
+.suggest-pic {
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid rgb(235, 235, 235);
+}
+
+.x {
+    height: 5px;
+}
+
