--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body {
 .suggested {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 800px;
     width: 58%;
     margin-left: 6%;
     border: 1px solid #24232319;
@@ -277,9 +277,9 @@ body {
 
 .suggestions {
     display: flex;
-    height: 50px;
-    width: 28%;
-    margin-left: 40px;
+    height: 500px;
+    width: 30%;
+    margin-left: 3%;
     border: 1px solid #24232319;
     border-radius: 3px;;
 }
