--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body {
 .suggested {
     display: flex;
     flex-direction: column;
-    height: 800px;
+    height: 400px;
     width: 58%;
     margin-left: 6%;
     border: 1px solid #24232319;
@@ -261,7 +261,7 @@ body {
 }
 
 .suggest-caption {
-    margin-left: 3%;
+    margin-left: 4%;
     color:#8f8f8f;
     font-size: .9em;
     font-weight: 650;
@@ -275,11 +275,11 @@ body {
     color: rgb(76 164 255);
 }
 
-.suggestions {
+.suggestion {
     display: flex;
-    height: 500px;
+    height: 300px;
     width: 30%;
-    margin-left: 3%;
+    margin-left: 4%;
     margin-top: 8px;
     border: 1px solid #24232319;
     border-radius: 3px;;
