--- a/style.css
+++ b/style.css
@@ -241,10 +241,10 @@ body {
     width: 20px;
 }
 
-.suggestions {
+.suggested {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 800px;
     width: 58%;
     margin-left: 6%;
     border: 1px solid #24232319;
@@ -261,7 +261,7 @@ body {
 }
 
 .suggest-caption {
-    margin-left: 4%;
+    margin-left: 3%;
     color:#8f8f8f;
     font-size: .9em;
     font-weight: 650;
@@ -275,11 +275,11 @@ body {
     color: rgb(76 164 255);
 }
 
-.suggestion {
+.suggestions {
     display: flex;
-    height: 300px;
+    height: 500px;
     width: 30%;
-    margin-left: 4%;
+    margin-left: 3%;
     margin-top: 8px;
     border: 1px solid #24232319;
     border-radius: 3px;;
