--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body {
 .suggested {
     display: flex;
     flex-direction: column;
-    height: 800px;
+    height: 400px;
     width: 58%;
     margin-left: 6%;
     border: 1px solid #24232319;
@@ -261,7 +261,7 @@ body {
 }
 
 .suggest-caption {
-    margin-left: 3%;
+    margin-left: 4%;
     color:#8f8f8f;
     font-size: .9em;
     font-weight: 650;
@@ -277,12 +277,17 @@ body {
 
 .suggestions {
     display: flex;
-    height: 500px;
-    width: 30%;
-    margin-left: 3%;
+    margin-left: 4%;
     margin-top: 8px;
+    height: 500px;
+    width: 93%;
+}
+
+.suggestion {
+    display: flex;
     border: 1px solid #24232319;
-    border-radius: 3px;;
+    border-radius: 3px;
+    width: 30%;
 }
 
 .suggest-pic {
