--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ body {
 
 .suggestion {
     display: flex;
+    flex-wrap: wrap;
     border: 1px solid #24232319;
     border-radius: 3px;
     width: 30%;
