--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ body {
     margin-left: 6%;
     border: 1px solid #24232319;
     margin-top: 50px;
+    margin-bottom: 100px;
     border-radius: 3px;
     background-color: white;
 }
@@ -279,7 +280,7 @@ body {
     display: flex;
     margin-left: 4%;
     margin-top: 8px;
-    height: 205px;
+    height: 215px;
     width: 93%;
 }
 
