--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ body {
     border-radius: 50%;
     border: 1px solid rgb(235, 235, 235);
     margin-top: 20px;
-    margin-left: 35%;
+    margin-left: 40%;
 }
 
 .x {
@@ -306,6 +306,11 @@ body {
 }
 
 .suggest-name {
+    margin: auto;
+    margin-top: 10px;
+}
+
+.suggest-meta {
     margin: auto;
 }
 
