--- a/style.css
+++ b/style.css
@@ -310,14 +310,14 @@ body {
     margin: auto;
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: .8em;
+    font-size: 1.1em;
     font-weight: 550;
 }
 
 .suggest-meta {
     margin: auto;
     margin-bottom: 0px;
-    font-size: .7em;
+    font-size: .9em;
     font-weight:550;
     color:#8f8f8f;
 }
