--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ body {
 .suggestion {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
     border: 1px solid #24232319;
     border-radius: 3px;
     width: 30%;
