--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    row-gap: 0px;
+    gap: 0px;
     border: 1px solid #24232319;
     border-radius: 3px;
     width: 30%;
