--- a/style.css
+++ b/style.css
@@ -298,12 +298,15 @@ body {
     justify-content: space-between;
 }
 
+.suggest-pic-link {
+    margin-left: 38%;
+}
+
 .suggest-pic {
     height: 50px;
     border-radius: 50%;
     border: 1px solid rgb(235, 235, 235);
     margin-top: 20px;
-    margin-left: 38%;
 }
 
 .x {
