--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 }
 
 #column-1 {
-    width: 58%;
+    width: auto;
 }
 
 .post {
@@ -101,6 +101,7 @@ body {
     border: 1px solid #24232319;
     display: flex;
     flex-direction: column;
+    margin: auto;
     margin-top: 20px;
     border-radius: 3px;
 }
