--- a/style.css
+++ b/style.css
@@ -367,8 +367,7 @@ body {
     background-color: black;
 }
 
-/*
-@media (min-width: 1029px) s{
+@media (min-width: 1029px) {
     #column-2 {
         visibility: visible;
     }
@@ -379,4 +378,3 @@ body {
         visibility: hidden;
     }
 }
-*/
