--- a/style.css
+++ b/style.css
@@ -368,13 +368,21 @@ body {
 }
 
 @media (min-width: 1029px) {
+    #column-1 {
+        width: 65%;
+    }
+
     #column-2 {
         visibility: visible;
-        width: 35vw;
+        width: 35%;
     }
 }
 
 @media (max-width: 1029px) {
+    #column-1 {
+        width: 100%;
+    }
+
     #column-2 {
         visibility: hidden;
         width: 0px;
