--- a/style.css
+++ b/style.css
@@ -102,12 +102,13 @@ body {
 }
 
 .post {
-    width: 81%;
+    width: 92%;
     background-color: white;
     border: 1px solid #24232319;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin-left: 6%;
+    margin-right: 2%;
     margin-top: 20px;
     border-radius: 3px;
 }
