--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
     border: 1px solid #24232319;
     display: flex;
     flex-direction: column;
-    margin-left: 6%;
+    margin-left: 6vw;
     margin-right: 2%;
     margin-top: 20px;
     border-radius: 3px;
