--- a/style.css
+++ b/style.css
@@ -367,7 +367,19 @@ body {
 #column-2 {
     width: 35vw;
     height: 100%;
-    background-color: black;
+    background-color: rgb(123, 255, 0);
+    display: flex;
+    flex-direction: column;
+}
+
+.my-profile {
+    display: flex;
+}
+
+.my-pic {
+    width: 65px;
+    border-radius: 50%;
+    border: 1px solid rgb(235, 235, 235);
 }
 
 @media (min-width: 800px) {
