--- a/style.css
+++ b/style.css
@@ -443,7 +443,8 @@ body {
 .story-info {
     display: flex;
     flex-direction: column;
-    
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .story-user {
