--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ body {
 }
 
 .copyright {
-    margin-top: 15px;
+    padding-top: 15px;
     font-size: .7em;
     font-weight: 450;
     color:#c7c7c7;
