--- a/style.css
+++ b/style.css
@@ -408,12 +408,12 @@ body {
 
 #nermal-suggest-pic {
     position: relative;
-    left: 15px;
+    right: 15px;
 }
 
 #arlene-suggest-pic {
     position: relative;
-    left: 15px;
+    right: 15px;
 }
 
 .stories {
